--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,12 @@
   {% endblock %}
 </head>
 <body>
+  <header>
+    <nav>
+      <a href="/user/list" class="form__button">To Users</a>
+      <a href="/" class="form__button">Homepage</a>
+    </nav>
+  </header>
   <div id="content">{% block content %}{% endblock %}</div>
 </body>
 </html>
