--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,4 @@
+/* css for making something look like a button */
 .form__button {
   font: bold 11px Arial;
   text-decoration: none;
@@ -8,6 +9,17 @@
   border-right: 1px solid #333333;
   border-bottom: 1px solid #333333;
   border-left: 1px solid #CCCCCC;
+}
+
+.tag {
+  border-top: 2px solid #3339a8;
+  border-left:2px solid #3339a8;
+  border-bottom: 2px solid #131988;
+  border-right: 2px solid #131988;
+  background-color: #232998;
+  color: #EEEEEE;
+  text-decoration: none;
+  border-radius: 15%;
 }
 
 .form {
