--- a/templates/user_post.html
+++ b/templates/user_post.html
@@ -7,9 +7,15 @@
   <input type="text" placeholder="Title" class="form__input" name="title" id="title">
   <label for="title" class="form__label">Title</label>
   <textarea form="post_id" placeholder="Content" class="form__input" name="content" id="content">
-
   </textarea>
   <label for="content" class="form__label">Content</label>
+  {% for tag in tags %}
+  <input type="checkbox" 
+         value="{{ tag.id }}"
+         id="tag_{{ tag.id }}"
+         name="tags">
+  <label class="form__label" for="tag_{{ tag.id }}">{{ tag.name }}</label>
+  {% endfor %}
   <input type="hidden" class="form__input" value="{{ user.id }}" name="user-id">
   <button type="submit" class="form__button">Create Post</button>
   <a href="/user/{{ user.id }}" class="form__button">Back to user</a>
